--- a/Sprint2/Sprint_2_Spring/src/main/webapp/resources/css/style.css
+++ b/Sprint2/Sprint_2_Spring/src/main/webapp/resources/css/style.css
@@ -9,5 +9,7 @@ body {
 	width: 90%;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 10px;
+	padding: 20px;
+	border-radius: 10px;
+	margin-top: 20px;
 }
